# openfeature-provider-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pull-request.yml  release.yml
examples/: advanced_usage.py  basic_usage.py
examples/basic/: main.py
src/openfeature_provider_hyphen/: __init__.py  cache_client.py  hooks.py  hyphen_client.py  provider.py  types.py  utils.py
tests/openfeature_provider_hyphen/: test_cache_client.py  test_hyphen_client.py  test_provider.py  test_utils.py
